Add garlic, bgm handler, and level 5-4

--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -291,6 +291,12 @@ butter_damage = 40
 interval = 3.0
 cooldown = 7.5
 cost = 125
+[garlic]
+velocity = 1.0
+self_box = { width = 1.0, height = 0.9 }
+health = 1500
+cooldown = 15.0
+cost = 75
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
