--- a/assets/levels/0/0.toml
+++ b/assets/levels/0/0.toml
@@ -1,5 +1,5 @@
 [config]
-layout = "Pool"
+layout = "Night"
 selection = { "All" = [] }
 game = ["Intro"]
 modify = { give = -1, next = { stage = 1, level = 1 } }
@@ -8,5 +8,5 @@ sun = 0
 points = 0
 wait = 0.0
 big = false
-fixed = [[5, 10], [10, 4]]
+fixed = [[4, 5], [1, 1], [2, 1], [3, 1], [5, 5], [6, 5]]
 avail = []
