Add original music to the game

--- a/assets/levels/1/10.toml
+++ b/assets/levels/1/10.toml
@@ -3,6 +3,7 @@ selection = { "All" = [-1, -2, -3, -4, -5, -6, -7, -8] }
 layout = "Day"
 modify = { give = -9, next = { stage = 2, level = 1 }, slots = 7 }
 sun = 1000
+bgm = "Ub"
 [[waves]]
 points = 0
 wait = 0.0
