--- a/assets/levels/2/5.toml
+++ b/assets/levels/2/5.toml
@@ -4,6 +4,7 @@ layout = "Night"
 game = ["WhackAZombie"]
 modify = { give = -13, next = { stage = 2, level = 6 } }
 sun = 0
+bgm = "Lb"
 [[waves]]
 points = 300
 wait = 20.0
