--- a/assets/levels/3/5.toml
+++ b/assets/levels/3/5.toml
@@ -4,6 +4,7 @@ layout = "Pool"
 game = ["QuickShot"]
 modify = { give = -21, next = { stage = 3, level = 6 } }
 sun = 100
+bgm = "Lb"
 [[waves]]
 points = 0
 wait = 30.0
