--- a/assets/text/dave.toml
+++ b/assets/text/dave.toml
@@ -63,4 +63,10 @@ map = [
             "Pro tip #3: Shooters will hit the roof. Use lobbers instead.",
         ],
     ],
+    [
+        { stage = 5, level = 5 },
+        [
+            "This level lets you plant 5 creatures in a row!",
+        ],
+    ],
 ]
