--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -297,6 +297,26 @@ self_box = { width = 1.0, height = 0.9 }
 health = 1500
 cooldown = 15.0
 cost = 75
+[melon_pult]
+velocity = [2.6, -2.5]
+self_box = { width = 0.9, height = 1.1 }
+melon_box = { width = 0.5, height = 0.5 }
+fire = { additional = 0.0, splash = 0.25, range = { x = [
+    -1.5,
+    1.5,
+], y = [
+    -1.5,
+    1.5,
+], z = [
+    -0.5,
+    0.5,
+] } }
+times = 1
+health = 300
+damage = 80
+interval = 3.0
+cooldown = 7.5
+cost = 325
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
