--- a/assets/levels/2/3.toml
+++ b/assets/levels/2/3.toml
@@ -25,7 +25,7 @@ avail = [1, 2, 3]
 points = 200
 wait = 80.0
 big = true
-fixed = [[1, 3], [5, 1]]
+fixed = [[4, 1], [1, 3], [5, 1]]
 avail = [1, 2, 3, 6]
 [[waves]]
 points = 150
@@ -55,5 +55,5 @@ avail = [1, 2, 3]
 points = 500
 wait = 80.0
 big = true
-fixed = [[6, 1]]
+fixed = [[4, 2], [6, 1]]
 avail = [1, 2, 3, 5, 6]
