--- a/assets/levels/2/9.toml
+++ b/assets/levels/2/9.toml
@@ -79,5 +79,5 @@ avail = [1, 2, 3]
 points = 1000
 wait = 60.0
 big = true
-fixed = [[1, 1], [5, 1]]
+fixed = [[4, 3], [1, 1], [5, 1]]
 avail = [1, 2, 3, 5, 6, 7, 8]
