--- a/assets/levels/5/6.toml
+++ b/assets/levels/5/6.toml
@@ -1,11 +1,77 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = 0, next = { stage = 5, level = 5 } }
-sun = 99990
+modify = { give = -38, next = { stage = 5, level = 7 } }
+sun = 50
 [[waves]]
 points = 0
-wait = 0.0
+wait = 30.0
 big = false
-fixed = [[16, 1], [3, 1]]
+fixed = [[1, 1], [2, 1]]
 avail = []
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[2, 1], [3, 1]]
+avail = []
+[[waves]]
+points = 150
+wait = 50.0
+big = false
+fixed = [[12, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 40.0
+big = false
+fixed = [[15, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 200
+wait = 50.0
+big = false
+fixed = [[1, 1], [7, 1]]
+avail = [2, 3, 7]
+[[waves]]
+points = 300
+wait = 60.0
+big = true
+fixed = [[4, 1], [1, 2], [16, 1]]
+avail = [2, 3, 7]
+[[waves]]
+points = 250
+wait = 50.0
+big = false
+fixed = [[12, 1], [15, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 0
+wait = 40.0
+big = false
+fixed = [[15, 1], [1, 2], [2, 3], [3, 1], [7, 1]]
+avail = []
+[[waves]]
+points = 450
+wait = 30.0
+big = false
+fixed = [[12, 2]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 350
+wait = 40.0
+big = false
+fixed = [[16, 1], [2, 1]]
+avail = [1, 2, 3, 7]
+[[waves]]
+points = 500
+wait = 50.0
+big = false
+fixed = [[1, 3], [3, 2]]
+avail = [2, 3, 7]
+[[waves]]
+points = 650
+wait = 60.0
+big = false
+fixed = [[4, 2], [16, 2]]
+avail = [1, 2, 3, 7]
