--- a/assets/text/dave.toml
+++ b/assets/text/dave.toml
@@ -41,7 +41,7 @@ map = [
     [
         { stage = 4, level = 1 },
         [
-            "When the night falls...",
+            "Here we are into the night fall.",
         ],
     ],
     [
