--- a/assets/text/achievements.toml
+++ b/assets/text/achievements.toml
@@ -2,3 +2,19 @@
 name = "Now This Is Getting Exciting"
 desc = "Get any exciting music triggered"
 vis = "NameOnly"
+[impulsive_killer]
+name = "Impulsive Killer"
+desc = "Kill an All-Star Zombie while it is running"
+vis = "NameOnly"
+[fungi_party]
+name = "Fungi Party"
+desc = "Complete a day level using only non-plantae, fungi, and/or coffee beans"
+vis = "NameOnly"
+[dark_rules]
+name = "Dark Rules"
+desc = "Complete level 4-10 without planterns"
+vis = "NameOnly"
+[speed_run_101]
+name = "Speedrun 101"
+desc = "Complete a level under 2/3 of the expected time"
+vis = "Full"
