--- a/assets/factors/plants.toml
+++ b/assets/factors/plants.toml
@@ -336,6 +336,15 @@ damage = 0
 interval = 3.0
 cooldown = 7.5
 cost = 125
+[gold_bloom]
+velocity = { x = [-2.5, 2.5], y = [-2.5, 2.5], z = 0, r = 3.14 }
+self_box = { width = 0.9, height = 1.0 }
+health = 300
+times = 5
+interval = 0.5
+cooldown = 75.0
+cost = 0
+multiplier = 1.0
 [bowling_nut]
 velocity = { x = 2.25, y = 1.5, z = 0.0, r = -4.5 }
 self_box = { width = 0.7, height = 0.9 }
