--- a/assets/text/creatures.toml
+++ b/assets/text/creatures.toml
@@ -193,9 +193,14 @@ Damage: 0.0x(garlic)"""
 name = "Citrullus lanatus"
 short = "Deals heavy damage to groups of zombies"
 desc = """Deals heavy damage, and has good splash damage
-Damage: High, but splash is low"""
+Damage: High, but splash is medium"""
 [desc.ethylene]
 name = "Compressed Ethylene"
 short = "Speeds up cooldown of plants"
 desc = """Speeds cooldown of plants, and plants only
 Damage: Basically nothing"""
+[desc.sap_fling]
+name = "Pinophyta ???"
+short = "Slows groups of zombies"
+desc = """Slows zombies in a 1x1 area
+Damage: Surprisingly none"""
