--- a/assets/levels/1/12.toml
+++ b/assets/levels/1/12.toml
@@ -7,41 +7,47 @@ sun = 75
 points = 0
 wait = 30.0
 big = false
-fixed = [[1, 2], [2, 1]]
+fixed = [[1, 1], [2, 2]]
 avail = []
 [[waves]]
 points = 0
-wait = 40.0
-big = false
-fixed = [[2, 1], [3, 2]]
-avail = []
-[[waves]]
-points = 200
 wait = 30.0
 big = false
-fixed = [[1, 3], [3, 1]]
-avail = [2, 3]
+fixed = [[1, 1], [2, 2], [3, 1]]
+avail = []
+[[waves]]
+points = 0
+wait = 30.0
+big = false
+fixed = [[1, 5], [2, 1], [3, 1]]
+avail = []
 [[waves]]
 points = 300
 wait = 40.0
 big = false
-fixed = [[2, 1], [3, 2]]
+fixed = [[2, 3], [3, 1]]
 avail = [1, 2]
 [[waves]]
-points = 350
+points = 450
 wait = 30.0
 big = false
-fixed = [[1, 2], [3, 1]]
-avail = [1, 2, 3]
+fixed = [[3, 3]]
+avail = [1, 2]
 [[waves]]
-points = 400
+points = 500
+wait = 40.0
+big = false
+fixed = [[2, 2]]
+avail = [1, 2]
+[[waves]]
+points = 500
 wait = 30.0
 big = false
-fixed = [[1, 3], [3, 5]]
+fixed = [[1, 2], [2, 1], [3, 2]]
 avail = [1, 2]
 [[waves]]
 points = 700
 wait = 50.0
 big = true
-fixed = [[301, 1], [1, 5]]
+fixed = [[301, 1], [3, 2], [1, 5]]
 avail = [2, 3]
