--- a/assets/text/creatures.toml
+++ b/assets/text/creatures.toml
@@ -204,3 +204,8 @@ name = "Pinophyta ???"
 short = "Slows groups of zombies"
 desc = """Slows zombies in a 1x1 area
 Damage: Surprisingly none"""
+[desc.gold_bloom]
+name = "Chrysogonum virginianum"
+short = "Gives a burst of sun"
+desc = """Gives you a burst of sun when planted
+Damage: This is non-attacking"""
