Add level 1-19, fix problems in game experience

--- a/assets/text/dave.toml
+++ b/assets/text/dave.toml
@@ -69,4 +69,11 @@ map = [
             "This level lets you plant 5 creatures in a row!",
         ],
     ],
+    [
+        { stage = 1, level = 11 },
+        [
+            "Welcome to expansion levels.",
+            "This pack of levels is intended for hardcore players, thus casual players may find their gaming experience unpleasant. Be warned.",
+        ],
+    ],
 ]
