--- a/assets/levels/2/5.toml
+++ b/assets/levels/2/5.toml
@@ -5,6 +5,7 @@ game = ["WhackAZombie"]
 modify = { give = -13, next = { stage = 2, level = 6 } }
 sun = 0
 bgm = "Lb"
+publish = { name = "Whack a Zombie" }
 [[waves]]
 points = 300
 wait = 20.0
