--- a/assets/levels/1/5.toml
+++ b/assets/levels/1/5.toml
@@ -4,6 +4,7 @@ selection = { "All" = [-2, -3, -101] }
 modify = { give = -5, next = { stage = 1, level = 6 } }
 sun = 125
 bgm = "Lb"
+publish = { name = "Bowling" }
 [[waves]]
 points = 0
 wait = 20.0
