--- a/assets/levels/4/5.toml
+++ b/assets/levels/4/5.toml
@@ -5,6 +5,7 @@ game = ["Random"]
 modify = { give = -29, next = { stage = 4, level = 6 } }
 sun = 200
 bgm = "Lb"
+publish = { name = "Randomness" }
 [[waves]]
 points = 0
 wait = 30.0
