--- a/assets/factors/ex_zombies.toml
+++ b/assets/factors/ex_zombies.toml
@@ -26,3 +26,15 @@ interval = 0.8
 tackle_damage = 2000
 cooldown = 7.5
 cost = 250
+[sunedit]
+velocity = [-0.095, -0.09]
+rage_velocity = [-0.365, -0.36]
+self_box = { width = 0.6, height = 1.1 }
+sunedit_box = { width = 0.7, height = 0.8 }
+self_health = [420, 70]
+sunedit_health = 1800
+damage = 60
+interval = 0.6
+rage_interval = 0.15
+cooldown = 7.5
+cost = 250
