--- a/assets/levels/1/20.toml
+++ b/assets/levels/1/20.toml
@@ -1,9 +1,9 @@
 [config]
 layout = "Day"
 selection = "Any"
-game = ["InfiSun"]
+game = ["NoSun"]
 modify = { give = -301, next = { stage = 2, level = 11 } }
-sun = 0xbadeffec
+sun = 0x4000
 bgm = "Ub"
 publish = { name = "War of the Day" }
 [[waves]]
