Add almanac system, modify save format

--- a/assets/levels/0/0.toml
+++ b/assets/levels/0/0.toml
@@ -2,7 +2,7 @@
 layout = "Night"
 selection = { "All" = [] }
 game = ["Intro"]
-modify = { give = -1, next = { stage = 1, level = 1 } }
+modify = { give = -1, next = [1, 1] }
 sun = 0
 [[waves]]
 points = 0
