--- a/assets/levels/4/5.toml
+++ b/assets/levels/4/5.toml
@@ -2,7 +2,7 @@
 selection = { "All" = [-17, -25, -10, -10, -10, -10, -10, -10] }
 layout = "Fog"
 game = ["Random"]
-modify = { give = -29, next = { stage = 4, level = 6 } }
+modify = { give = -29, next = [4, 6] }
 sun = 200
 bgm = "Lb"
 publish = { name = "Randomness" }
