--- a/assets/levels/1/1.toml
+++ b/assets/levels/1/1.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1] }
-modify = { give = -2, next = { stage = 1, level = 2 } }
+modify = { give = -2, next = [1, 2] }
 sun = 150
 [[waves]]
 points = 0
