--- a/assets/levels/1/10.toml
+++ b/assets/levels/1/10.toml
@@ -1,7 +1,7 @@
 [config]
 selection = { "All" = [-1, -2, -3, -4, -5, -6, -7, -8] }
 layout = "Day"
-modify = { give = -9, next = { stage = 2, level = 1 }, slots = 7 }
+modify = { give = -9, next = [2, 1], slots = 7 }
 sun = 1000
 bgm = "Ub"
 [[waves]]
