--- a/assets/levels/1/15.toml
+++ b/assets/levels/1/15.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-2, -3, -18, -101] }
-modify = { give = 0, next = { stage = 1, level = 16 } }
+modify = { give = 0, next = [1, 16] }
 sun = 200
 bgm = "Lb"
 publish = { name = "Bowling (Ex)" }
