--- a/assets/levels/1/17.toml
+++ b/assets/levels/1/17.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = "Any"
-modify = { give = 0, next = { stage = 1, level = 17 } }
+modify = { give = 0, next = [1, 17] }
 sun = 75
 [[waves]]
 points = 0
