--- a/assets/levels/1/2.toml
+++ b/assets/levels/1/2.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1, -2] }
-modify = { give = -3, next = { stage = 1, level = 3 } }
+modify = { give = -3, next = [1, 3] }
 sun = 150
 [[waves]]
 points = 0
