--- a/assets/levels/1/3.toml
+++ b/assets/levels/1/3.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1, -2, -3] }
-modify = { give = -4, next = { stage = 1, level = 4 } }
+modify = { give = -4, next = [1, 4] }
 sun = 100
 [[waves]]
 points = 0
