--- a/assets/levels/1/4.toml
+++ b/assets/levels/1/4.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1, -2, -3, -4] }
-modify = { give = 0, next = { stage = 1, level = 5 } }
+modify = { give = 0, next = [1, 5] }
 sun = 100
 [[waves]]
 points = 0
