--- a/assets/levels/1/6.toml
+++ b/assets/levels/1/6.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1, -2, -3, -4, -5] }
-modify = { give = -6, next = { stage = 1, level = 7 } }
+modify = { give = -6, next = [1, 7] }
 sun = 50
 [[waves]]
 points = 0
