--- a/assets/levels/1/7.toml
+++ b/assets/levels/1/7.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = { "All" = [-1, -2, -3, -4, -5, -6] }
-modify = { give = -7, next = { stage = 1, level = 8 } }
+modify = { give = -7, next = [1, 8] }
 sun = 50
 [[waves]]
 points = 0
