--- a/assets/levels/1/8.toml
+++ b/assets/levels/1/8.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = "Any"
-modify = { give = -8, next = { stage = 1, level = 9 } }
+modify = { give = -8, next = [1, 9] }
 sun = 50
 [[waves]]
 points = 0
