--- a/assets/levels/1/9.toml
+++ b/assets/levels/1/9.toml
@@ -1,7 +1,7 @@
 [config]
 layout = "Day"
 selection = "Any"
-modify = { give = 0, next = { stage = 1, level = 10 } }
+modify = { give = 0, next = [1, 10] }
 sun = 50
 [[waves]]
 points = 0
