--- a/assets/levels/2/10.toml
+++ b/assets/levels/2/10.toml
@@ -1,7 +1,7 @@
 [config]
 selection = { "All" = [-9, -10, -11, -12, -13, -14, -15, -16] }
 layout = "Night"
-modify = { give = -17, next = { stage = 3, level = 1 }, slots = 8 }
+modify = { give = -17, next = [3, 1], slots = 8 }
 sun = 1000
 bgm = "Ub"
 [[waves]]
