--- a/assets/levels/2/17.toml
+++ b/assets/levels/2/17.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Night"
-modify = { give = 0, next = { stage = 2, level = 18 } }
+modify = { give = 0, next = [2, 18] }
 sun = 75
 [[waves]]
 points = 0
