--- a/assets/levels/2/2.toml
+++ b/assets/levels/2/2.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Night"
-modify = { give = -11, next = { stage = 2, level = 3 } }
+modify = { give = -11, next = [2, 3] }
 sun = 50
 [[waves]]
 points = 0
