--- a/assets/levels/2/3.toml
+++ b/assets/levels/2/3.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Night"
-modify = { give = -12, next = { stage = 2, level = 4 } }
+modify = { give = -12, next = [2, 4] }
 sun = 50
 [[waves]]
 points = 0
