--- a/assets/levels/2/4.toml
+++ b/assets/levels/2/4.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Night"
-modify = { give = 0, next = { stage = 2, level = 5 } }
+modify = { give = 0, next = [2, 5] }
 sun = 50
 [[waves]]
 points = 0
