--- a/assets/levels/2/9.toml
+++ b/assets/levels/2/9.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Night"
-modify = { give = 0, next = { stage = 2, level = 10 } }
+modify = { give = 0, next = [2, 10] }
 sun = 50
 [[waves]]
 points = 100
