--- a/assets/levels/3/10.toml
+++ b/assets/levels/3/10.toml
@@ -1,7 +1,7 @@
 [config]
 selection = { "All" = [-2, -17, -18, -19, -20, -21, -22, -23, -24] }
 layout = "Pool"
-modify = { give = -25, next = { stage = 4, level = 1 }, slots = 9 }
+modify = { give = -25, next = [4, 1], slots = 9 }
 sun = 1500
 bgm = "Ub"
 [[waves]]
