--- a/assets/levels/3/3.toml
+++ b/assets/levels/3/3.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Pool"
-modify = { give = -20, next = { stage = 3, level = 4 } }
+modify = { give = -20, next = [3, 4] }
 sun = 50
 [[waves]]
 points = 0
