--- a/assets/levels/3/6.toml
+++ b/assets/levels/3/6.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Pool"
-modify = { give = -22, next = { stage = 3, level = 7 } }
+modify = { give = -22, next = [3, 7] }
 sun = 50
 [[waves]]
 points = 0
