--- a/assets/levels/3/8.toml
+++ b/assets/levels/3/8.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Pool"
-modify = { give = -24, next = { stage = 3, level = 9 } }
+modify = { give = -24, next = [3, 9] }
 sun = 50
 [[waves]]
 points = 0
