--- a/assets/levels/3/9.toml
+++ b/assets/levels/3/9.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Pool"
-modify = { give = 0, next = { stage = 3, level = 10 } }
+modify = { give = 0, next = [3, 10] }
 sun = 50
 [[waves]]
 points = 0
