--- a/assets/levels/4/1.toml
+++ b/assets/levels/4/1.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = -26, next = { stage = 4, level = 2 } }
+modify = { give = -26, next = [4, 2] }
 sun = 50
 [[waves]]
 points = 0
