--- a/assets/levels/4/10.toml
+++ b/assets/levels/4/10.toml
@@ -2,7 +2,7 @@
 selection = { "ThisMany" = 11 }
 layout = "Fog"
 game = ["Adventure", "Thunder"]
-modify = { give = -33, next = { stage = 5, level = 1 }, slots = 10 }
+modify = { give = -33, next = [5, 1], slots = 10 }
 sun = 150
 bgm = "Rain"
 [[waves]]
