--- a/assets/levels/4/3.toml
+++ b/assets/levels/4/3.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = -28, next = { stage = 4, level = 4 } }
+modify = { give = -28, next = [4, 4] }
 sun = 50
 [[waves]]
 points = 0
