--- a/assets/levels/4/4.toml
+++ b/assets/levels/4/4.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = 0, next = { stage = 4, level = 5 } }
+modify = { give = 0, next = [4, 5] }
 sun = 50
 [[waves]]
 points = 0
