--- a/assets/levels/4/6.toml
+++ b/assets/levels/4/6.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = -30, next = { stage = 4, level = 7 } }
+modify = { give = -30, next = [4, 7] }
 sun = 50
 [[waves]]
 points = 0
