--- a/assets/levels/4/7.toml
+++ b/assets/levels/4/7.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = -31, next = { stage = 4, level = 8 } }
+modify = { give = -31, next = [4, 8] }
 sun = 50
 [[waves]]
 points = 0
