--- a/assets/levels/4/8.toml
+++ b/assets/levels/4/8.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Fog"
-modify = { give = -32, next = { stage = 4, level = 9 } }
+modify = { give = -32, next = [4, 9] }
 sun = 50
 [[waves]]
 points = 0
