--- a/assets/levels/5/4.toml
+++ b/assets/levels/5/4.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = 0, next = { stage = 5, level = 5 } }
+modify = { give = 0, next = [5, 5] }
 sun = 50
 [[waves]]
 points = 0
