--- a/assets/levels/5/5.toml
+++ b/assets/levels/5/5.toml
@@ -2,7 +2,7 @@
 selection = "Any"
 layout = "Roof"
 game = ["Columns"]
-modify = { give = -37, next = { stage = 5, level = 6 } }
+modify = { give = -37, next = [5, 6] }
 sun = 150
 bgm = "Ub"
 publish = { name = "Columns Like You See 'Em" }
