--- a/assets/levels/5/6.toml
+++ b/assets/levels/5/6.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = -38, next = { stage = 5, level = 7 } }
+modify = { give = -38, next = [5, 7] }
 sun = 50
 [[waves]]
 points = 0
