--- a/assets/levels/5/7.toml
+++ b/assets/levels/5/7.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = -39, next = { stage = 5, level = 8 } }
+modify = { give = -39, next = [5, 8] }
 sun = 50
 [[waves]]
 points = 0
