--- a/assets/levels/5/8.toml
+++ b/assets/levels/5/8.toml
@@ -1,7 +1,7 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = -40, next = { stage = 5, level = 9 } }
+modify = { give = -40, next = [5, 9] }
 sun = 50
 [[waves]]
 points = 0
