--- a/assets/levels/5/9.toml
+++ b/assets/levels/5/9.toml
@@ -1,8 +1,8 @@
 [config]
 selection = "Any"
 layout = "Roof"
-modify = { give = 0, next = { stage = 5, level = 10 }, unlock = [
-    { stage = 1, level = 11 },
+modify = { give = 0, next = [5, 10], unlock = [
+    [1, 11],
 ] }
 sun = 50
 [[waves]]
