--- a/assets/factors/ex_plants.toml
+++ b/assets/factors/ex_plants.toml
@@ -7,3 +7,14 @@ interval = 32.0
 cooldown = 15.0
 cost = 125
 multiplier = 1.0
+[homing_thistle]
+velocity = 2.2
+self_box = { width = 1.0, height = 1.0 }
+prick_box = { width = 0.5, height = 0.25 }
+range = { x = [-inf, inf], y = [-2.5, 2.5], z = [-0.1, 0.1] }
+times = 1
+health = 300
+damage = 40
+interval = 2.0
+cooldown = 7.5
+cost = 250
